--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ bcrypt==4.1.2
 Werkzeug==3.0.1
 openai>=1.12.0
 Pillow==10.1.0
-python-dotenv==1.0.0
+Pillow==10.4.0
 requests==2.31.0
 psycopg2-binary==2.9.9
